--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h2>Practice your English with voice</h2>
       <p>Choose your level, speak, and get feedback. Comfortable learning for everyone.</p>
       <!-- <button onclick="startPractice()">Try Speaking Now</button> -->
-       <button onclick="location.href='login.html'">Try speaking now</button>
+       <button onclick="location.href='practice.html'">Try speaking now</button>
     </section>
     <h3> On our website you will get a unique opportunity to practice English pronunciation taking into account your current level - from the simplest basic phrases and words (A1) to 
       complex academic and professional expressions (C2). Such a step-by-step approach is of great importance for successful and sustainable language learning.</h3>
