--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       <!-- <button onclick="startPractice()">Try Speaking Now</button> -->
        <button onclick="location.href='practice.html'">Try speaking now</button>
     </section>
-    <h3> On our website you will get a unique opportunity to practice English pronunciation taking into account your current level - from the simplest basic phrases and words (A1) to 
-      complex academic and professional expressions (C2). Such a step-by-step approach is of great importance for successful and sustainable language learning.</h3>
-    <h3>Why is this important?
+   <h3 class="opisanie">On our website you will get a unique opportunity to practice English pronunciation taking into account your current level - from the simplest basic phrases and words (A1) to 
+      complex academic and professional expressions (C2). Such a step-by-step approach is of great importance for successful and sustainable language learning.
+<p>Why is this important?</p>
 Smooth and consistent development of skills. 
-Beginners will not be overwhelmed by complex constructions, and advanced learners will be able to constantly challenge themselves, improving pronunciation and expanding their vocabulary.</h3>
-    <h3>Stay motivated. When exercises are appropriate to your level, the learning process becomes interesting and achievable. You see your progress, which inspires you to move on.
-Deep understanding of the language. By mastering pronunciation at each stage, you are not just learning words - you are learning to express yourself clearly and confidently, which is critical for real-life communication.</h3>
-<h3>Prepare for any situation. From everyday conversations to business negotiations and academic presentations, you will be able to speak confidently in any environment thanks to carefully selected exercises.</h3>
+Beginners will not be overwhelmed by complex constructions, and advanced learners will be able to constantly challenge themselves, improving pronunciation and expanding their vocabulary.</p>
+<p>Stay motivated. When exercises are appropriate to your level, the learning process becomes interesting and achievable. You see your progress, which inspires you to move on.
+Deep understanding of the language. By mastering pronunciation at each stage, you are not just learning words - you are learning to express yourself clearly and confidently, which is critical for real-life communication.</p>
+<p>Prepare for any situation. From everyday conversations to business negotiations and academic presentations, you will be able to speak confidently in any environment thanks to carefully selected exercises.</h3>
   </main>
 
   <footer>
