--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       <!-- <button onclick="startPractice()">Try Speaking Now</button> -->
        <button onclick="location.href='practice.html'">Try speaking now</button>
     </section>
-   <h3 class="opisanie">On our website you will get a unique opportunity to practice English pronunciation taking into account your current level - from the simplest basic phrases and words (A1) to 
-      complex academic and professional expressions (C2). Such a step-by-step approach is of great importance for successful and sustainable language learning.
+   <h3 class="opisanie"><p>On our website you will get a unique opportunity to practice English pronunciation taking into account your current level - from the simplest basic phrases and words (A1) to 
+      complex academic and professional expressions (C2).</p><p> Such a step-by-step approach is of great importance for successful and sustainable language learning.</p>
 <p>Why is this important?</p>
-Smooth and consistent development of skills. 
+<p>Smooth and consistent development of skills. 
 Beginners will not be overwhelmed by complex constructions, and advanced learners will be able to constantly challenge themselves, improving pronunciation and expanding their vocabulary.</p>
 <p>Stay motivated. When exercises are appropriate to your level, the learning process becomes interesting and achievable. You see your progress, which inspires you to move on.
 Deep understanding of the language. By mastering pronunciation at each stage, you are not just learning words - you are learning to express yourself clearly and confidently, which is critical for real-life communication.</p>
