--- a/profile.html
+++ b/profile.html
@@ -15,8 +15,8 @@
       </nav>
   <div class="form-container">
     <h2>Welcome<span id="username"></span>!</h2>
-    <p>Your progress</p>
-    <ul id="progress-list">
+    <p>Your progress will be recorded here soon. Stay with us!</p>
+<!--     <ul id="progress-list">
       <li>A1 — Words:<span data-level="1">✅</span> </li> 
       <li >A2 — Words:<span data-level="2">❌</span> </li> 
       <li >B1 — Words:<span data-level="3">❌</span> </li> 
@@ -29,7 +29,7 @@
        <li >B2 — Sentences:<span data-level="10">❌</span> </li>
       <li >C1 — Sentences:<span data-level="11">❌</span> </li>
        <li >C2 — Sentences:<span data-level="12">❌</span> </li>
-    </ul>
+    </ul> -->
   </div>
 
 <script>
