--- a/practice/words.html
+++ b/practice/words.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="form-container3">
+    <p id="user-response"></p>
     <h2>Select your level <span id="level-number"> </span></h2>
     <div class="levels">
       <button onclick="startLevel('A1')">A1</button>
@@ -18,7 +19,10 @@
        <button onclick="startLevel('C2')">C2</button>
     </div>
   </div>
-   <button class="backtprof" onclick="location.href='../profile.html'">Back to profile</button>
+   <p id="target-word" style="text-align: center; color: white; font-size: larger;"></p>
+  <p id="status-msg" style="text-align: center; color: white;font-size: larger;"></p> 
+  <p id="result-msg" style="text-align: center;font-size: larger;"></p>
+    <button class="backtprof" onclick="location.href='../profile.html'">Back to profile</button>
     <button class="changemode" onclick="location.href='../practice.html'">Change mode</button>
   
 
