--- a/practice/sentences.html
+++ b/practice/sentences.html
@@ -8,9 +8,7 @@
 </head>
 <body>
   <div class="form-container4">
-    <p id="target-sentence"></p>
-    <p id="user-response"></p>
-    <p id="result-msg"></p>
+ <p id="user-response"></p>
     <h2>Select Your Level</h2>
     <div class="levels">
       <button onclick="startLevel('A1')" id="level-A1" data-complete="false">A1</button>
@@ -19,9 +17,11 @@
       <button onclick="startLevel('B2')" id="level-B2" data-complete="false">B2</button>
       <button onclick="startLevel('C1')" id="level-C1" data-complete="false">C1</button>
       <button onclick="startLevel('C2')" id="level-C2" data-complete="false">C2</button>
-
     </div>
   </div>
+  <p id="target-sentence" style="text-align: center; color: white;"></p>
+  <p id="status-msg" style="text-align: center; color: white;"></p> 
+  <p id="result-msg" style="text-align: center;"></p>
  <button class="backtprof" onclick="location.href='../profile.html'">Back to profile</button>
     <button class="changemode" onclick="location.href='../practice.html'">Change mode</button>
   
